# ironbad

./: .gitignore  AGENTS.md  LICENSE  README.md  data-model.dbml  docker-compose.yml
backend/: .env.example  BACKEND_ARCHITECTURE.md  Dockerfile  pyproject.toml
backend/app/: __init__.py  constants.py  database.py  dbmodels.py  embeddings.py  enums.py  main.py  models.py  prompts.py  schemas.py  tasks.py  utils.py
backend/app/api/: deps.py  router.py  system.py
backend/app/common/: schemas.py
backend/app/core/: config.py  db.py  lifespan.py
backend/app/features/contract/: api.py
backend/app/features/contract_agent/: agent.py  api.py  events.py  schemas.py  services.py  tools.py
backend/app/features/contract_annotations/: api.py  schemas.py  services.py
backend/app/features/contract_chat/: api.py  events.py  schemas.py  services.py
backend/app/features/contract_clauses/: api.py  schemas.py
backend/app/features/contract_issues/: api.py  schemas.py
backend/app/routers/: agent.py  analysis.py  chat.py  contract_actions.py  contract_chat.py  contract_clauses.py  contract_issues.py  contract_sections.py  contract_terms.py  contracts.py  index.py  ingestion.py  notifications.py  openai_agent.py  pydanticai_agent.py  standard_clause_rules.py  standard_clauses.py  standard_term_rules.py  standard_terms.py  workflows.py
backend/app/sample_data/: standard_clause_rules.yml  standard_clauses.yml
backend/app/services/: notifications.py
backend/app/utils/: embeddings.py
backend/app/workflows/: analysis.py  contract_parsing.py  ingestion.py  term_extraction.py
(+95 files in other folders)
