[project]
name = "ironbad-backend"
version = "0.1.0"
description = "Ironbad Contract Lifecycle Management Backend"
authors = [
    {name = "Eric Lundquist", email = "e.t.lundquist@gmail.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.12.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "docling>=2.53.0",
    "openai>=1.108.1",
    "tiktoken>=0.11.0",
    "pgvector>=0.4.1",
    "taskiq[reload]>=0.11.18",
    "taskiq-redis>=1.1.0",
    "sse-starlette>=3.0.2",
    "redis>=4.2",
    "pydantic-ai>=1.1.0",
    "logfire[asyncpg,fastapi]>=4.13.2",
    "openai-agents>=0.3.3",
]
requires-python = ">=3.11"
